--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,18 @@
 			<artifactId>junit</artifactId>
 			<scope>compile</scope>
 		</dependency>
+	    <!-- integration with Swagger API doc generation -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<!-- integration with Swagger End -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
