Updated the POM to include the latest springboot frame work thus providing the springboot test functionality to write better test cases. Wrote the test cases that would be automatically run when maven install or maven run commands are used. Added the profiles in yml file so that during maven install/maven run these test cases are run.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     generate-ddl: true
+  profiles: test
  
 logging:
   level:
