--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     <version>0.1.0</version>
 
     <parent>
-    	<groupId>org.springframework.boot</groupId>
-    	<artifactId>spring-boot-starter-parent</artifactId>
-    	<version>1.3.5.RELEASE</version>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-parent</artifactId>
+	    	<version>1.5.6.RELEASE</version>
     </parent>
     <dependencies>
     	<dependency>
@@ -26,6 +26,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<!-- spring-test, hamcrest, ... -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
